--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@ html {
 }
 
 .page {
+  justify-content: center;
+  align-content: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -16,6 +18,7 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  padding: 133px 30px;
 }
 
 h1,
@@ -27,7 +30,8 @@ ul,
 ol,
 li,
 blockquote,
-fieldset {
+fieldset,
+input {
   margin: 0;
   padding: 0;
 }
@@ -35,4 +39,178 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  align-items: end;
+  width: 1140px;
+  height: 534px;
+  gap: 30px;
+  
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.result__video-container {
+  position: relative;
+  width: 711px;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-form__fieldset {
+  border: none;
+  width: fit-content;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  color: #fff;
+}
+
+.search-form + .search-form__fieldset-title {
+  border-bottom: 1px solid white;
+  padding-bottom: 5px;
+}
+
+.search-form__label {
+  display: flex;
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  font-family: inherit; 
+  color: inherit;
+  font-size: inherit;
+  width: 226px;
+  padding: 3px 14px 3px 0;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+ border:none;
+}
+
+.search-form__textfield:focus {
+  border:1px solid white;
+ }
+
+.search-form__checkbox-list {
+  display: flex;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+  height: 100%;
+}
+
+.title {
+  font-family: Oswald;
+  font-weight: 700;
+  font-size: 75px;
+  line-height: 94%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+
+.content__list {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  overflow: hidden auto;
+  height: 298px;
+  width: 100%;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color:#fff;
+}
+
+.content__video-card {
+  display: flex;
+}
+.content__video-card-description-container{
+  flex-grow: 1;
+}
+
+.content__video-card-description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 90%;
+  color: #fff;
+}
+
+.content__video-card-title {
+  margin-bottom: 6px;
+  font-family: Oswald;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: contain;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.button {
+  border: 1px solid #fff;
+  background-color: transparent;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  height: 34px;
+}
+
+.more-button {
+  width: 399px;
+  height: 34px;
 }
