--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+:root {
+  --co-white:#fff;
+  --co-black:#1b1919;
+  --co-gray: #545050;
+}
+
 *,
 *::before,
 *::after {
@@ -9,16 +15,14 @@ html {
 }
 
 .page {
-  justify-content: center;
-  align-content: center;
+  display: flex;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  color: #fff;
+  color: var(--co-white);
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
-  background-color: #1b1919;
-  padding: 133px 30px;
+  background-color: var(--co-black);
 }
 
 h1,
@@ -41,12 +45,23 @@ ol {
   list-style: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .content {
   display: flex;
   align-items: end;
   width: 1140px;
   height: 534px;
   gap: 30px;
+  margin:auto;
   
 }
 
@@ -71,6 +86,7 @@ ol {
 .search-form {
   display: flex;
   justify-content: space-between;
+  align-items: end;
 }
 
 .search-form__fieldset {
@@ -81,17 +97,17 @@ ol {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
-  color: #fff;
+  color: var(--co-white);
 }
 
 .search-form + .search-form__fieldset-title {
-  border-bottom: 1px solid white;
-  padding-bottom: 5px;
+  border-bottom: 1px solid var(--co-white);
 }
 
 .search-form__label {
   display: flex;
   cursor: pointer;
+  user-select: none;
 }
 
 .search-form__textfield {
@@ -102,7 +118,7 @@ ol {
   padding: 3px 14px 3px 0;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid var(--co-white);
   appearance: none;
 }
 
@@ -111,12 +127,34 @@ ol {
 }
 
 .search-form__textfield:focus {
-  border:1px solid white;
+  border:1px solid var(--co-white);
  }
 
 .search-form__checkbox-list {
+  margin-top: 5px;
   display: flex;
+  gap: 15px;
 }
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  border: 1px solid var(--co-white);
+  width: 19px;
+  height: 19px;
+  margin-right: 5px;
+}
+
+.search-form__label:has(.search-form__checkbox:checked) .search-form__pseudo-checkbox:before {
+  /* либо через соседство .search-form__checkbox:checked + .search-form__pseudo-checkbox:before
+  или же родство .search-form__checkbox:checked ~ .search-form__pseudo-checkbox:before*/
+  content: "";
+  width: 15px;
+  height: 15px;
+  background-color: var(--co-white);
+  margin: auto;
+}
+
+
 
 .content__details {
   display: flex;
@@ -132,11 +170,11 @@ ol {
   font-size: 75px;
   line-height: 94%;
   text-transform: uppercase;
-  color: #fff;
+  color: var(--co-white);
 }
 
 .content__accent {
-  color: #545050;
+  color: var(--co-gray);
 }
 
 
@@ -152,7 +190,7 @@ ol {
 
 .content__card-link {
   text-decoration: none;
-  color:#fff;
+  color:var(--co-white);
 }
 
 .content__video-card {
@@ -166,7 +204,7 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 90%;
-  color: #fff;
+  color: var(--co-white);
 }
 
 .content__video-card-title {
@@ -176,7 +214,7 @@ ol {
   font-size: 30px;
   line-height: 100%;
   text-transform: uppercase;
-  color: #fff;
+  color: var(--co-white);
 }
 
 .content__video-card-thumbnail {
@@ -185,32 +223,23 @@ ol {
   object-fit: contain;
 }
 
-.visually-hidden {
-  position: absolute;
-  inline-size: 1px;
-  block-size: 1px;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  white-space: nowrap;
-}
-
 .button {
-  border: 1px solid #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  border: 1px solid var(--co-white);
   background-color: transparent;
   cursor: pointer;
   font-weight: 700;
   font-size: 18px;
   text-align: center;
-  color: #fff;
+  color: var(--co-white);
+  user-select: none;
 }
 
 .search-form__submit-button {
-  width: 194px;
-  height: 34px;
+  padding: 5px 73px;
 }
 
 .more-button {
-  width: 399px;
-  height: 34px;
+  padding: 5px 0;
+  width: 100%;
 }
